--- a/ToC/index.html
+++ b/ToC/index.html
@@ -7,89 +7,70 @@
 
         </head>
         <body style="position:relative; width:100vw; height:100vh; margin:30; padding:20;">
-            <h1>»istota Vody: 40</h1>
-            <h1>»Ìslo kola: 6</h1>
-            <img src="mutant.png" class="fish" style="position:absolute; left:76%; top:66%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:41%; top:69%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:87%; top:76%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:21%; top:40%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:16%; top:34%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:30%; top:27%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:84%; top:81%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:62%; top:54%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:16%; top:80%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:31%; top:33%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:81%; top:29%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:33%; top:85%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:74%; top:63%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:34%; top:76%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:70%; top:42%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:15%; top:39%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:7%; top:79%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:95%; top:72%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:55%; top:32%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:32%; top:46%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:15%; top:31%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:27%; top:32%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:41%; top:35%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:67%; top:30%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:59%; top:66%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:73%; top:51%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:81%; top:31%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:75%; top:25%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:95%; top:24%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:67%; top:27%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:43%; top:75%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:83%; top:54%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:46%; top:55%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:16%; top:42%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:85%; top:27%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:66%; top:28%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:31%; top:47%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:18%; top:64%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:31%; top:36%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:20%; top:31%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:35%; top:55%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:6%; top:82%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:16%; top:76%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:89%; top:78%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:54%; top:40%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:43%; top:48%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:69%; top:55%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:15%; top:33%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:91%; top:28%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:37%; top:70%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:73%; top:20%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:49%; top:30%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:40%; top:81%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:5%; top:68%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:71%; top:52%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:54%; top:57%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:49%; top:62%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:55%; top:78%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:14%; top:29%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:45%; top:60%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:63%; top:56%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:43%; top:40%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:60%; top:64%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:87%; top:38%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:75%; top:54%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:65%; top:40%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:74%; top:85%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:30%; top:23%; width:70px; height:70px; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:27%; top:24%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:17%; top:36%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:69%; top:29%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:33%; top:42%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:48%; top:52%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:57%; top:44%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:26%; top:55%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:15%; top:69%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="ryba.png" class="fish" style="position:absolute; left:52%; top:68%; width:70px; height:70px; transform:none;">
-<img src="mutant.png" class="fish" style="position:absolute; left:30%; top:45%; width:120px; height:120px; z-index: 1; transform:none;">
-<img src="ryba.png" class="fish" style="position:absolute; left:74%; top:71%; width:70px; height:70px; transform:scaleX(-1);">
-<img src="mutant.png" class="fish" style="position:absolute; left:79%; top:27%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
-
+            <h1>»istota vody: 30</h1>
+            <h1>»Ìslo kola: 7</h1>
+            <img src="surface.png" class="water-level" style="position: absolute; top: 7%; left: 0; width: 100%; height: auto; z-index: -1;">
+            <img src="mutant.png" class="fish" style="position:absolute; left:53%; top:49%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:13%; top:22%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:17%; top:44%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:82%; top:49%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:25%; top:54%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:26%; top:43%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:29%; top:25%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:90%; top:27%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:3%; top:76%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:31%; top:41%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:10%; top:83%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:37%; top:49%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:23%; top:33%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:72%; top:25%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:44%; top:70%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:37%; top:28%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:60%; top:64%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:19%; top:33%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:72%; top:66%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:14%; top:77%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:43%; top:48%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:65%; top:22%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:25%; top:24%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:23%; top:25%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:83%; top:45%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:48%; top:36%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:46%; top:49%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:57%; top:46%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:87%; top:68%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:54%; top:75%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:85%; top:42%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:63%; top:42%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:10%; top:35%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:42%; top:40%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:74%; top:64%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:73%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:70%; top:83%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:5%; top:48%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:78%; top:55%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:82%; top:64%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:36%; top:45%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:56%; top:55%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:51%; top:47%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:7%; top:69%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:64%; top:48%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:84%; top:53%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:79%; top:64%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:21%; top:50%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:90%; top:61%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:59%; top:75%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:19%; top:70%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:11%; top:49%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="mutant.png" class="fish" style="position:absolute; left:80%; top:67%; width:120px; height:120px; z-index: 1; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:56%; top:71%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:26%; top:85%; width:70px; height:70px; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:51%; top:76%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:50%; top:55%; width:70px; height:70px; transform:none;">
+<img src="ryba.png" class="fish" style="position:absolute; left:22%; top:35%; width:70px; height:70px; transform:none;">
+<img src="mutant.png" class="fish" style="position:absolute; left:50%; top:44%; width:120px; height:120px; z-index: 1; transform:scaleX(-1);">
+<img src="ryba.png" class="fish" style="position:absolute; left:22%; top:33%; width:70px; height:70px; transform:scaleX(-1);">
+              
         </body>
         </html>
         
